--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "expressmongotemplate",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9"
-  }
+	"name": "expressmongotemplate",
+	"version": "1.0.1",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js",
+		"biome": "npx @biomejs/biome check --write ."
+	},
+	"author": "nikhil",
+	"license": "MIT",
+	"description": "",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"file-system-api-router": "^1.0.1",
+		"iron-session": "^8.0.4",
+		"mongoose": "^8.12.1",
+		"nodemon": "^3.1.9"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4"
+	}
 }
