--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=5000
-MONGODB_URL=mongodb://localhost:27017/your_database_name
-SESSION_SECRET=your_session_secret
-FRONTEND_URL=http://localhost:3000
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+FRONTEND_URL=http://localhost:3000/
+SESSION_SECRET=your_atleast_32_character_long_session_secret
 NODE_ENV=development
 API_ROUTES_DIR=api
+PORT=5000
