--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon index.js",
-		"biome": "npx @biomejs/biome check --write ."
+		"biome": "npx @biomejs/biome check --write . --verbose",
+		"seed": "node ./prisma/seed.js"
 	},
 	"author": "nikhil",
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
+		"@prisma/client": "^6.6.0",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
@@ -23,6 +25,10 @@
 		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4"
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.14.1",
+		"prisma": "^6.6.0",
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.3"
 	}
 }
