--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": true,
-		"ignore": ["node_modules"]
+		"ignore": ["node_modules", "generated"]
 	},
 	"formatter": {
 		"enabled": true,
